--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^1.3.4",
+    "bootstrap": "^5.3.1",
+    "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
